[package]
name = "rse-aes"
version = "0.1.0"
edition = "2024"

[dependencies]
lru = "0.16"
parking_lot = "0.12"
smallvec = "1.15"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rand = { version = "0.9", features = ["small_rng"] }
quickcheck = "1"

[[bench]]
name = "bandwidth"
harness = false
